# kiln

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: cyb-203.md
.github/workflows/: validation.yml
contract-fixtures/v1/: README.md  event-envelope.valid.json  repository-search-request-payload.invalid.missing-query.json  repository-search-request-payload.valid.json
deploy/schemas/: index.html  nginx.conf
devtools/: pyproject.toml
devtools/migration_tools/: new_migration.py
devtools/schema_tools/: generate_go_models.py  generate_models.py  generate_py_models.py  new_schema.py  remove_schema.py  validate.py
docs/: cli.md  contracts.md  events.md  persistence.md  repository-protocol.md  run-lifecycle.md  runtime-protocol.md  security.md  validation.md  vertical-slice.md
go/cmd/kiln-runtime/: main.go
go/contracttests/: schema_contract_test.go
go/internal/filelock/: filelock_windows.go
go/internal/logger/: doc.go  log_sink.go  log_sink_test.go  logger.go
go/internal/model/: adapter.go  gateway.go
go/internal/persistence/: doc.go  errors.go  migrations.go  store.go  store_test.go
go/internal/protocol/: doc.go  envelope.go  errors.go  framing.go  framing_test.go  jsonrpc.go  jsonrpc_test.go  methods.go  methods_test.go  pending.go  stdio.go  stdio_test.go
go/internal/repository/: client.go  session.go
go/internal/runtime/: config.go  doc.go  errors.go  errors_test.go  log_sink.go  log_sink_test.go  router.go  router_test.go  runtime.go  runtime_test.go
go/internal/util/: doc.go  serialization.go  util.go  versions.go
go/schema/: validate.go  version.go
go/schema/shared/: validate.go
integration/: __init__.py  conftest.py
integration/e2e/: __init__.py  test_agent_scenarios.py
integration/e2e/scenarios/: __init__.py  agent_lifecycle.py  base.py
python/kiln/: pyproject.toml
python/kiln/logger/: __init__.py  errors.py  logger.py
python/kiln/models/: budget.py  errors.py  run.py
python/kiln/protocol/: errors.py  framing.py  jsonrpc.py  method.py  method_validation.py  pending.py  stdio.py  stdio_jsonrpc.py
python/kiln/repository/: server.py  worker.py
python/kiln/schemas/: __init__.py  _internal.py  action.py  artifact_events.py  budget_events.py  budget_exhausted.py  budget_initialized.py  budget_reconciled.py  budget_reserved.py  context_item_evicted.py  context_plan_applied.py  context_rendered.py  cost.py  decision.py  diagnostic_log_reference.py  envelope.py  error.py  error_category.py  exhaustion.py  generate_payload.py  generate_request.py  generate_response.py  generate_result.py  grant.py  initialize_request_payload.py  item.py  model_egress_evaluated.py  model_invocation_completed.py  model_invocation_failed.py  model_invocation_started.py  model_request_rendered.py  open_session_request.py  open_session_request_payload.py  open_session_response.py  plan.py  protocol_request.py  protocol_response.py  reference.py  repository_preparation_completed.py  repository_preparation_started.py  (+36 more)
python/kiln/schemas/artifact/: __init__.py  changed_file_manifest_reference.py
python/kiln/schemas/budget/: __init__.py  _internal.py  exhaustion.py  reservation.py  state.py  usage.py
python/kiln/schemas/capability/: __init__.py  _internal.py  decision.py  grant.py  identifier.py  scope.py  security_profile.py
python/kiln/schemas/common/: __init__.py
python/kiln/schemas/context/: __init__.py  content.py  provenance.py  relevance.py  rendered.py  state.py  validity.py
python/kiln/schemas/event/: __init__.py  _internal.py  artifact_created.py  budget_committed.py  budget_denied.py  configuration.py  context_events.py  context_item_admitted.py  context_item_available.py  context_plan_produced.py  context_plan_requested.py  error.py  grant.py  limits.py  model_egress_evaluated.py  model_events.py  model_invocation_failed.py  model_response_interpreted.py  repository_events.py  repository_query_failed.py  repository_query_started.py  repository_session_closed.py  repository_session_opened.py  repository_snapshot_reference.py  repository_version_pinned.py  repository_worker_started.py  requirement.py  run_created.py  run_failed.py  run_initialization_completed.py  run_lifecycle_events.py  run_output_production_completed.py  runtime_session_events.py  scope.py  security_profile.py  state.py  terminal_result_reference.py  turn_completed.py  turn_failed.py  usage.py
python/kiln/schemas/model/: __init__.py  error.py  generate_result.py  source_range.py  usage.py
python/kiln/schemas/repository/: __init__.py  alternative_representation.py  byte_range.py  candidate.py  diagnostic.py  error.py  preparation_status.py  source.py  usage.py  version.py
python/kiln/schemas/run/: __init__.py  _internal.py  answer_reference.py  error.py  lifecycle_state.py  output_mode.py  patch_reference.py  report_reference.py  result.py  scope.py  specification.py  state.py  stop_reason.py  task_provenance.py  task_state.py
python/kiln/schemas/runtime/: __init__.py  _internal.py  error.py  health_result.py  initialize_result.py  shutdown_request_payload.py  shutdown_result.py
python/kiln/schemas/validation/: __init__.py  _internal.py  approval_requirement.py  citation_requirement.py  policy_requirement.py  requirement.py  scope.py
python/kiln/schemas/workspace/: __init__.py  version.py
python/kiln/sdk/: __init__.py  agent.py  client.py  config.py  errors.py  runtime_client.py  runtime_connection.py  runtime_exit.py  runtime_process.py
python/kiln/sdk/_runtime_os/: posix.py  win32.py
python/kiln/tests/: test_contract_fixtures.py
python/tests/contract/: test_contract_fixtures.py  test_generated_schemas_import.py
python/tests/integration/: test_generated_schemas_import.py
python/tests/unit/: test_framing.py
schemas/: README.md  manifest.json
schemas/artifact/v1/: answer-reference.schema.json  changed-file-manifest-reference.schema.json  diagnostic-log-reference.schema.json  reference.schema.json  (+4 more)
schemas/scripts/: new_schema.py  pyproject.toml  validate.py
(+711 files in other folders)
