[project]
name = "kiln"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/julianstephens/kiln"
Issues = "https://github.com/julianstephens/kiln/issues"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["B", "LOG", "Q", "RET", "SIM", "ARG", "I", "N", "E", "W", "F", "RUF", "TRY"]

[tool.pytest.ini_options]
addopts = "-n auto"
pythonpath = ["python"]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "datamodel-code-generator[http]>=0.66.0",
    "jsonschema[format]>=4.26.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "referencing>=0.37.0",
    "kiln-devtools",
]

[tool.uv.sources]
kiln-devtools = { workspace = true }

[tool.uv.workspace]
members = [
    "python/kiln",
    "devtools",
]

[tool.uv.build-backend]
module-root = "python"
module-name = "kiln"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
