[project]
name = "kiln"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/julianstephens/kiln"
Issues = "https://github.com/julianstephens/kiln/issues"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "kiln-devtools",
]

[tool.uv.sources]
kiln-devtools = { workspace = true }

[tool.uv.workspace]
members = [
    "python/kiln",
    "devtools",
]

[tool.uv.build-backend]
module-root = "python"
module-name = "kiln"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
