[project]
name = "kiln-devtools"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/julianstephens/kiln"
Issues = "https://github.com/julianstephens/kiln/issues"

[project.scripts]
newschema = "schema_tools.new_schema:main"
validateschemas = "schema_tools.validate:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["schema_tools"]