[project]
name = "kiln-sdk"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio[trio]>=4.14.1",
    "pydantic>=2.13.4",
    "structlog>=26.1.0",
]

[project.urls]
Homepage = "https://github.com/julianstephens/kiln"
Issues = "https://github.com/julianstephens/kiln/issues"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "pytest>=9.1.1",
    "pytest-mock>=3.14.1",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
exclude = [
    "kiln/schemas/**/*.py",
]

[tool.ruff.lint]
extend-select = ["B", "LOG", "Q", "RET", "SIM", "ARG", "I", "N", "E", "W", "F", "RUF", "TRY"]

[tool.pytest.ini_options]
addopts = "-n auto --ignore=schemas --cov --cov-report=term-missing --cov-config=kiln/pyproject.toml"
anyio = "auto"

[tool.coverage.report]
omit = [
    "kiln/schemas/*"
]
